-
Bug
-
Resolution: Done
-
P1: Critical
-
5.14.0 Alpha
-
None
-
-
ec0e9f29dfd0b45edf5fd33e8ccf763e604612d7 (qt/qtbase/5.14)
After the updates to use multi-arch, Qt can no longer load the Android QPA plugin and fails with the following message:
qt.qpa.plugin: Could not load the Qt platform plugin "android" in "" even though it was found.
- is duplicated by
-
QTBUG-81061 Android applications fail to launch
-
- Closed
-
- relates to
-
QTBUG-81061 Android applications fail to launch
-
- Closed
-